2011-01-11  Andy Estes  <aestes@apple.com>

Reviewed by Darin Adler.

        REGRESSION (r71562): servePendingRequests() no longer called when
        resources are done loading.
        https://bugs.webkit.org/show_bug.cgi?id=52264
        <rdar://problem/8767429>

        In r71562, servePendingRequests() is no longer called in Loader's
        didFinishLoading(), didFail() and didReceiveResponse() methods. Since
        r71562 was intended only as a refactoring, these calls should be
        restored. At least one WebKit-based Mac OS X application relies on this
        for correct behavior.

        * loader/cache/CachedResourceLoader.cpp:
        (WebCore::CachedResourceLoader::loadDone): Call
        resourceLoadScheduler()->servePendingRequests().


Canonical link: https://commits.webkit.org/65873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75580 268f45cc-cd09-0410-ab3c-d52691b4dbfc